k8s/config/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: rml
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: alpacron/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: 250m
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 100
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
      volumes:
      - name: secrets
        secret:
          secretName: global-secret
