k8s/config/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
  namespace: rml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: alpacron/gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: 250m
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: global-secret
