k8s/config/state-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-deployment
  namespace: rml
  labels:
    app: state
spec:
  selector:
    matchLabels:
      app: state
  template:
    metadata:
      labels:
        app: state
    spec:
      containers:
      - name: state
        image: alpacron/state:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: 250m
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 50
          periodSeconds: 10
          timeoutSeconds: 10
      volumes:
      - name: secrets
        secret:
          secretName: global-secret
      imagePullSecrets:
      - name: regcred
