k8s/config/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: rml
spec:
  selector:
    app: gateway
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 443
