k8s/config/state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: state-service
  namespace: rml
spec:
  selector:
    app: state
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 443
